tools/tree-sitter-marmoset/test/corpus/vnext.txt
================================================================================
Top-level fn declaration
================================================================================

fn add(x: Int, y: Int) -> Int = x + y

--------------------------------------------------------------------------------

(source_file
  (fn_declaration
    name: (identifier)
    (parameter
      name: (identifier)
      type: (type_identifier))
    (parameter
      name: (identifier)
      type: (type_identifier))
    return_type: (type_identifier)
    body: (expr_or_block
      (infix_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Trait with default method and ampersand supertraits
================================================================================

trait Named[a]: Show & Eq = {
  fn full_name(self: a) -> Str = Show.show(self)
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier))
    supertraits: (supertrait_list
      (identifier)
      (identifier))
    (trait_method_signature
      name: (identifier)
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      return_type: (type_identifier)
      body: (expr_or_block
        (call_expression
          function: (field_access
            object: (identifier)
            field: (identifier))
          (identifier))))))

================================================================================
Trait signature with positional typed params
================================================================================

trait Eq[a] = {
  fn eq(a, a) -> Bool
  fn compare(a, Str) => Result[Int, Str]
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier))
    (trait_method_signature
      name: (identifier)
      (type_variable
        (identifier))
      (type_variable
        (identifier))
      return_type: (type_identifier))
    (trait_method_signature
      name: (identifier)
      (type_variable
        (identifier))
      (type_identifier)
      return_type: (generic_type
        name: (identifier)
        arg: (type_identifier)
        arg: (type_identifier)))))

================================================================================
vNext trait impl with override
================================================================================

impl[a: Show] Show[List[a]] = {
  override fn show(self: List[a]) -> Str = "ok"
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    type_params: (impl_type_parameter_list
      (constrained_type_param
        name: (identifier)
        constraints: (constraint_list
          (identifier))))
    target: (generic_type
      name: (identifier)
      arg: (generic_type
        name: (type_identifier)
        arg: (type_variable
          (identifier))))
    (method_definition
      name: (identifier)
      (parameter
        name: (identifier)
        type: (generic_type
          name: (type_identifier)
          arg: (type_variable
            (identifier))))
      return_type: (type_identifier)
      body: (expr_or_block
        (string_literal
          (string_content))))))

================================================================================
vNext inherent impl with inferred binders
================================================================================

impl Result[a, e] = {
  fn is_ok(self: Result[a, e]) -> Bool = true
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    target: (generic_type
      name: (identifier)
      arg: (type_variable
        (identifier))
      arg: (type_variable
        (identifier)))
    (method_definition
      name: (identifier)
      (parameter
        name: (identifier)
        type: (generic_type
          name: (identifier)
          arg: (type_variable
            (identifier))
          arg: (type_variable
            (identifier))))
      return_type: (type_identifier)
      body: (expr_or_block
        (boolean_literal)))))

================================================================================
Enum with postfix derive clause
================================================================================

enum Result[a, e] = {
  Ok(a),
  Err(e),
} derive Eq, Show

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier)
      (identifier))
    (enum_variant
      name: (identifier)
      (type_variable
        (identifier)))
    (enum_variant
      name: (identifier)
      (type_variable
        (identifier)))
    derive: (derive_clause
      trait: (identifier)
      trait: (identifier))))

================================================================================
Type definition with postfix derive clause
================================================================================

type UserId = Int derive Eq, Show

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (type_identifier)
    derive: (derive_clause
      trait: (identifier)
      trait: (identifier))))

================================================================================
Explicit lambda expression
================================================================================

(x: Int) -> x + 1

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (lambda_expression
      (lambda_parameter
        name: (identifier)
        type: (type_identifier))
      body: (expr_or_block
        (infix_expression
          left: (identifier)
          right: (integer_literal))))))

================================================================================
Effectful lambda expression
================================================================================

(item: Int) => puts(item)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (lambda_expression
      (lambda_parameter
        name: (identifier)
        type: (type_identifier))
      body: (expr_or_block
        (call_expression
          function: (identifier)
          (identifier))))))

================================================================================
Match expression with case arms and block body
================================================================================

match role {
  case Role.Admin: {
    "admin"
  }
  case Role.User: "user"
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier))
        body: (expr_or_block
          (block
            (expression_statement
              (string_literal
                (string_content))))))
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier))
        body: (expr_or_block
          (string_literal
            (string_content)))))))

================================================================================
Semicolonless statement before bracket-led call expression
================================================================================

let total = banana_counts.reduce((acc, n) -> acc + n)

[george, promoted_george].foreach((m) => puts(m.name))

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    value: (call_expression
      function: (field_access
        object: (identifier)
        field: (identifier))
      (lambda_expression
        (lambda_parameter
          name: (identifier))
        (lambda_parameter
          name: (identifier))
        body: (expr_or_block
          (infix_expression
            left: (identifier)
            right: (identifier))))))
  (expression_statement
    (call_expression
      function: (field_access
        object: (array_literal
          (identifier)
          (identifier))
        field: (identifier))
      (lambda_expression
        (lambda_parameter
          name: (identifier))
        body: (expr_or_block
          (call_expression
            function: (identifier)
            (field_access
              object: (identifier)
              field: (identifier))))))))

================================================================================
Pure vNext function type
================================================================================

let reducer: (Int, Int) -> Int = handler

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (function_type
      (type_identifier)
      (type_identifier)
      return_type: (type_identifier))
    value: (identifier)))

================================================================================
Effectful vNext function type
================================================================================

let reducer: (Int, Int) => Int = handler

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (function_type
      (type_identifier)
      (type_identifier)
      return_type: (type_identifier))
    value: (identifier)))

================================================================================
Effect-polymorphic vNext function type
================================================================================

let reducer: (Int, Int) ~> Int = handler

--------------------------------------------------------------------------------

(source_file
  (let_statement
    name: (identifier)
    type: (function_type
      (type_identifier)
      (type_identifier)
      return_type: (type_identifier))
    value: (identifier)))

================================================================================
Effect-polymorphic lambda expression
================================================================================

(x: Int) ~> x + 1

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (lambda_expression
      (lambda_parameter
        name: (identifier)
        type: (type_identifier))
      body: (expr_or_block
        (infix_expression
          left: (identifier)
          right: (integer_literal))))))
